# AlgorithmGo

./: CMakeLists.txt  README.md  main.cpp
PAT/: 000_introduction.cpp
PAT/01_basic/: 01_b1001.cpp  02_b1032.cpp  03_b1036.cpp  04_codeup_1928.cpp  05_b1022.cpp  06_b1009.cpp
PAT/02_algo_basic/: 01_a1025.cpp  02_0_introduction.cpp  02_greedy_b1020.cpp  02_greedy_b1023.cpp  2_00_introduction.cpp  2_01_introduction_recursion.cpp  2_02_introduction_nQueen.cpp  2_03_introduction_greedy.cpp
PAT/03_math_basic/: 3_00_introduction.cpp
PAT/04_stl/: 00_introduction.cpp  01_a1060.cpp
PAT/05_stack_queue_list/: 5_00_list_introduction.cpp  5_00_stack_introduction.cpp
PAT/06_dfs_bfs/: 6_00_dfs_introduction.cpp
PAT/07_tree/: 7_00_introduction.cpp
PAT/08_graph/: 8_MST_kruskal.cpp  8_MST_prim.cpp  8_critical_path.cpp  8_dfs.cpp  8_graph_introduction.cpp  8_shortest_path_Dijkstra.cpp  8_shortest_path_Dijkstra_dfs.cpp  8_shortest_path_SPFA.cpp  8_shortest_path_bellman_ford.cpp  8_shortest_path_floyd.cpp  8_topology.cpp
PAT/10_string/: 10_hash_advance.cpp  10_hash_advance_01.cpp  10_hash_advance_02.cpp  10_kmp.cpp
PAT/11_more/: 11_BIT.cpp  11_block.cpp
POJ/1_sort/: 01_bubblesort.cpp  01_quick_sort.cpp  02_merge_sort.cpp  02_selectsort.cpp  03_insertion_sort.cpp  04_bubble_sort.cpp  05_selection_sort.cpp  06_knapsack.cpp  07_knapsack_full.cpp  08_greatest_common_divisor_gcd.cpp  09_heap.cpp  10_hash.cpp  11_binary_search_tree.cpp  12_AVL.cpp
POJ/2_introduction/: 01_jitutonglong.cpp
bilibili/01_LinkList/: 01_LinkList_Basic.cpp  02_ReverseList.cpp  03_ReverseList.cpp  04_getIntersectionNode.cpp  05_getIntersectionNode.cpp  06_detectCycle.cpp  07_detectCycle.cpp  08_partition.cpp  09_copyRandomList.cpp  10_mergeTwoLists.cpp  11_mergeKLists.cpp
bilibili/02_stack_queue/: 01_stack_basic.cpp  02_queue_basic.cpp  03_queue_to_stack.cpp  04_stack_to_queue.cpp  05_minstack.cpp  06_valid_order.cpp  07_calculate.cpp  08_heap_basic.cpp  09_findKthLargest.cpp  10_findMedian.cpp
bilibili/03_greedy/: 01_cash_pay.cpp  02_findContentChildren.cpp  03_wiggleMaxLength.cpp  04_removeKdigits.cpp  05_canJump.cpp  06_jump.cpp  07_findMinArrowShots.cpp  08_get_minimum_stop.cpp
bilibili/04_recursion/: 01_recursion_basic.cpp  02_recursion_basic.cpp  03_subsets.cpp  04_subsets.cpp  05_subsetsWithDup.cpp  06_combinationSum2.cpp  07_combinationSum2.cpp  08_generateParenthesis.cpp  09_solveNQueens.cpp  10_merge_sort.cpp  11_countSmaller.cpp
bilibili/05_binarytree_graph/: 01_binary_tree_basic.cpp  02_pathSum.cpp  03_lowestCommonAncestor.cpp  04_flattern.cpp  05_flattern.cpp  06_bfs_basic.cpp  07_rightSideView.cpp  08_graph_basic.cpp  09_graph_basic.cpp  10_graph_dfs.cpp  11_graph_bfs.cpp  12_canFinish.cpp  13_canFinish.cpp
bilibili/06_binarysearch_tree/: 01_binary_search.cpp  02_binary_search.cpp  03_searchInsert.cpp  04_searchRange.cpp  05_cycleSearch.cpp  06_binary_search_tree.cpp  07_binary_search_tree.cpp  08_binary_search_tree_encode.cpp  09_countSmaller.cpp
bilibili/07_hash_string/: 01_longestPalindrome.cpp  02_wordPattern.cpp  03_groupAnagram.cpp  04_groupAnagram.cpp  05_lengthOfLongestSubstring.cpp  06_findRepeatedDnaSequences.cpp  07_findRepeatedDnaSequences.cpp  08_minWindow.cpp
bilibili/08_search/: 01_numIslands.cpp  02_ladderLength.cpp  03_ladderLength.cpp  04_makeSquare.cpp  05_makeSquare.cpp  06_trapRainWater.cpp  07_heap_struct.cpp
bilibili/09_dynamic/: 01_climbStairs.cpp  02_climbStairs.cpp  03_rob.cpp  04_maxSubArray.cpp  05_coinChange.cpp  06_minimumTotal.cpp  07_lengthOfLIS.cpp  08_lengthOfLIS.cpp  09_minPathSum.cpp  10_calculateMinimumHP.cpp
bilibili/10_other/: 01_trie_basic.cpp  02_trie_basic.cpp  03_trie.cpp  04_findCircleNum.cpp  05_disjoint_set.cpp  06_disjoint_set.cpp  07_sunRange.cpp  08_segment_tree.cpp
ccf/2013/: q1.cpp  q2.cpp  q3.cpp  q4.cpp  q5.cpp
leetcode/editor/cn/: 101_symmetric-tree.cpp  104_maximum-depth-of-binary-tree.cpp  105_construct-binary-tree-from-preorder-and-inorder-traversal.cpp  10_regular-expression-matching.cpp  110_balanced-binary-tree.cpp  1110_delete-nodes-and-return-forest.cpp  1143_longest-common-subsequence.cpp  121_best-time-to-buy-and-sell-stock.cpp  126_word-ladder-ii.cpp  128_longest-consecutive-sequence.cpp  135_candy.cpp  136_single-number.cpp  139_word-break.cpp  141_linked-list-cycle.cpp  142_linked-list-cycle-ii.cpp  144_binary-tree-preorder-traversal.cpp  146_lru-cache.cpp  149_max-points-on-a-line.cpp  155_min-stack.cpp  160_intersection-of-two-linked-lists.cpp  167_two-sum-ii-input-array-is-sorted.cpp  172_factorial-trailing-zeroes.cpp  188_best-time-to-buy-and-sell-stock-iv.cpp  190_reverse-bits.cpp  198_house-robber.cpp  1_two-sum.cpp  204_count-primes.cpp  205_isomorphic-strings.cpp  206_reverse-linked-list.cpp  208_implement-trie-prefix-tree.cpp  20_valid-parentheses.cpp  210_course-schedule-ii.cpp  215_kth-largest-element-in-an-array.cpp  218_the-skyline-problem.cpp  21_merge-two-sorted-lists.cpp  221_maximal-square.cpp  227_basic-calculator-ii.cpp  232_implement-queue-using-stacks.cpp  234_palindrome-linked-list.cpp  239_sliding-window-maximum.cpp  (+65 more)
leetcode/editor/cn/doc/: all.json  translation.json
