cmake_minimum_required(VERSION 3.17)
project(AlgorithmGo)

set(CMAKE_CXX_STANDARD 14)

add_executable(1_two-sum leetcode/editor/cn/1_two-sum.cpp)
add_executable(01_bubblesort POJ/1_sort/01_bubblesort.cpp)
add_executable(02_selectsort POJ/1_sort/02_selectsort.cpp)
add_executable(01_jitutonglong POJ/2_introduction/01_jitutonglong.cpp)
add_executable(01_LinkList_Basic bilibili/01_LinkList/01_LinkList_Basic.cpp)
add_executable(02_ReverseList bilibili/01_LinkList/02_ReverseList.cpp)
add_executable(03_ReverseList bilibili/01_LinkList/03_ReverseList.cpp)
add_executable(04_getIntersectionNode bilibili/01_LinkList/04_getIntersectionNode.cpp)
add_executable(05_getIntersectionNode bilibili/01_LinkList/05_getIntersectionNode.cpp)
add_executable(07_detectCycle bilibili/01_LinkList/07_detectCycle.cpp)
add_executable(06_detectCycle bilibili/01_LinkList/06_detectCycle.cpp)
add_executable(08_partition bilibili/01_LinkList/08_partition.cpp)
add_executable(09_copyRandomList bilibili/01_LinkList/09_copyRandomList.cpp)
add_executable(10_mergeTwoLists bilibili/01_LinkList/10_mergeTwoLists.cpp)
add_executable(11_mergeKLists bilibili/01_LinkList/11_mergeKLists.cpp)
add_executable(01_stack_basic bilibili/02_stack_queue/01_stack_basic.cpp)
add_executable(02_queue_basic bilibili/02_stack_queue/02_queue_basic.cpp)
add_executable(03_queue_to_stack bilibili/02_stack_queue/03_queue_to_stack.cpp)
add_executable(04_stack_to_queue bilibili/02_stack_queue/04_stack_to_queue.cpp)
add_executable(05_minstack bilibili/02_stack_queue/05_minstack.cpp)
add_executable(06_valid_order bilibili/02_stack_queue/06_valid_order.cpp)
add_executable(07_calculate bilibili/02_stack_queue/07_calculate.cpp)
add_executable(08_heap_basic bilibili/02_stack_queue/08_heap_basic.cpp)
add_executable(09_findKthLargest bilibili/02_stack_queue/09_findKthLargest.cpp)
add_executable(10_findMedian bilibili/02_stack_queue/10_findMedian.cpp)
add_executable(01_cash_pay bilibili/03_greedy/01_cash_pay.cpp)
add_executable(02_findContentChildren bilibili/03_greedy/02_findContentChildren.cpp)
add_executable(03_wiggleMaxLength bilibili/03_greedy/03_wiggleMaxLength.cpp)
add_executable(04_removeKdigits bilibili/03_greedy/04_removeKdigits.cpp)
add_executable(05_canJump bilibili/03_greedy/05_canJump.cpp)
add_executable(06_jump bilibili/03_greedy/06_jump.cpp)
add_executable(07_findMinArrowShots bilibili/03_greedy/07_findMinArrowShots.cpp)
add_executable(08_get_minimum_stop bilibili/03_greedy/08_get_minimum_stop.cpp)
add_executable(01_recursion_basic bilibili/04_recursion/01_recursion_basic.cpp)
add_executable(02_recursion_basic bilibili/04_recursion/02_recursion_basic.cpp)
add_executable(03_subsets bilibili/04_recursion/03_subsets.cpp)
add_executable(04_subsets bilibili/04_recursion/04_subsets.cpp)
add_executable(05_subsetsWithDup bilibili/04_recursion/05_subsetsWithDup.cpp)
add_executable(06_combinationSum2 bilibili/04_recursion/06_combinationSum2.cpp)
add_executable(07_combinationSum2 bilibili/04_recursion/07_combinationSum2.cpp)
add_executable(08_generateParenthesis bilibili/04_recursion/08_generateParenthesis.cpp)
add_executable(09_solveNQueens bilibili/04_recursion/09_solveNQueens.cpp)
add_executable(10_merge_sort bilibili/04_recursion/10_merge_sort.cpp)
add_executable(11_countSmaller bilibili/04_recursion/11_countSmaller.cpp)
add_executable(01_binary_tree_basic bilibili/05_binarytree_graph/01_binary_tree_basic.cpp)
add_executable(02_pathSum bilibili/05_binarytree_graph/02_pathSum.cpp)
add_executable(03_lowestCommonAncestor bilibili/05_binarytree_graph/03_lowestCommonAncestor.cpp)
add_executable(05_flattern bilibili/05_binarytree_graph/05_flattern.cpp)
add_executable(04_flattern bilibili/05_binarytree_graph/04_flattern.cpp)
add_executable(06_bfs_basic bilibili/05_binarytree_graph/06_bfs_basic.cpp)
add_executable(07_rightSideView bilibili/05_binarytree_graph/07_rightSideView.cpp)
add_executable(08_graph_basic bilibili/05_binarytree_graph/08_graph_basic.cpp)
add_executable(09_graph_basic bilibili/05_binarytree_graph/09_graph_basic.cpp)
add_executable(10_graph_dfs bilibili/05_binarytree_graph/10_graph_dfs.cpp)
add_executable(11_graph_bfs bilibili/05_binarytree_graph/11_graph_bfs.cpp)
add_executable(12_canFinish bilibili/05_binarytree_graph/12_canFinish.cpp)
add_executable(13_canFinish bilibili/05_binarytree_graph/13_canFinish.cpp)
add_executable(01_binary_search bilibili/06_binarysearch_tree/01_binary_search.cpp)
add_executable(02_binary_search bilibili/06_binarysearch_tree/02_binary_search.cpp)
add_executable(03_searchInsert bilibili/06_binarysearch_tree/03_searchInsert.cpp)
add_executable(04_searchRange bilibili/06_binarysearch_tree/04_searchRange.cpp)
add_executable(05_cycleSearch bilibili/06_binarysearch_tree/05_cycleSearch.cpp)
add_executable(06_binary_search_tree bilibili/06_binarysearch_tree/06_binary_search_tree.cpp)
add_executable(07_binary_search_tree bilibili/06_binarysearch_tree/07_binary_search_tree.cpp)
add_executable(08_binary_search_tree_encode bilibili/06_binarysearch_tree/08_binary_search_tree_encode.cpp)
add_executable(09_countSmaller bilibili/06_binarysearch_tree/09_countSmaller.cpp)
add_executable(01_longestPalindrome bilibili/07_hash_string/01_longestPalindrome.cpp)
add_executable(02_wordPattern bilibili/07_hash_string/02_wordPattern.cpp)
add_executable(03_groupAnagram bilibili/07_hash_string/03_groupAnagram.cpp)
add_executable(04_groupAnagram bilibili/07_hash_string/04_groupAnagram.cpp)
add_executable(05_lengthOfLongestSubstring bilibili/07_hash_string/05_lengthOfLongestSubstring.cpp)
add_executable(06_findRepeatedDnaSequences bilibili/07_hash_string/06_findRepeatedDnaSequences.cpp)
add_executable(07_findRepeatedDnaSequences bilibili/07_hash_string/07_findRepeatedDnaSequences.cpp)
add_executable(08_minWindow bilibili/07_hash_string/08_minWindow.cpp)
add_executable(01_numIslands bilibili/08_search/01_numIslands.cpp)
add_executable(02_ladderLength bilibili/08_search/02_ladderLength.cpp)
add_executable(03_ladderLength bilibili/08_search/03_ladderLength.cpp)
add_executable(04_makeSquare bilibili/08_search/04_makeSquare.cpp)
add_executable(05_makeSquare bilibili/08_search/05_makeSquare.cpp)
add_executable(06_trapRainWater bilibili/08_search/06_trapRainWater.cpp)
add_executable(07_heap_struct bilibili/08_search/07_heap_struct.cpp)
add_executable(01_climbStairs bilibili/09_dynamic/01_climbStairs.cpp)
add_executable(02_climbStairs bilibili/09_dynamic/02_climbStairs.cpp)
add_executable(03_rob bilibili/09_dynamic/03_rob.cpp)
add_executable(04_maxSubArray bilibili/09_dynamic/04_maxSubArray.cpp)
add_executable(05_coinChange bilibili/09_dynamic/05_coinChange.cpp)
add_executable(06_minimumTotal bilibili/09_dynamic/06_minimumTotal.cpp)
add_executable(07_lengthOfLIS bilibili/09_dynamic/07_lengthOfLIS.cpp)
add_executable(08_lengthOfLIS bilibili/09_dynamic/08_lengthOfLIS.cpp)
add_executable(09_minPathSum bilibili/09_dynamic/09_minPathSum.cpp)
add_executable(10_calculateMinimumHP bilibili/09_dynamic/10_calculateMinimumHP.cpp)
add_executable(01_trie_basic bilibili/10_other/01_trie_basic.cpp)
add_executable(02_trie_basic bilibili/10_other/02_trie_basic.cpp)
add_executable(03_trie bilibili/10_other/03_trie.cpp)
add_executable(04_findCircleNum bilibili/10_other/04_findCircleNum.cpp)
add_executable(05_disjoint_set bilibili/10_other/05_disjoint_set.cpp)
add_executable(06_disjoint_set bilibili/10_other/06_disjoint_set.cpp)
add_executable(07_sunRange bilibili/10_other/07_sunRange.cpp)
add_executable(08_segment_tree bilibili/10_other/08_segment_tree.cpp)