cmake_minimum_required(VERSION 3.17)
project(AlgorithmGo)

set(CMAKE_CXX_STANDARD 14)

add_executable(1_two-sum leetcode/editor/cn/1_two-sum.cpp)
add_executable(01_jitutonglong POJ/2_introduction/01_jitutonglong.cpp)
add_executable(01_LinkList_Basic bilibili/01_LinkList/01_LinkList_Basic.cpp)
add_executable(02_ReverseList bilibili/01_LinkList/02_ReverseList.cpp)
add_executable(03_ReverseList bilibili/01_LinkList/03_ReverseList.cpp)
add_executable(04_getIntersectionNode bilibili/01_LinkList/04_getIntersectionNode.cpp)
add_executable(05_getIntersectionNode bilibili/01_LinkList/05_getIntersectionNode.cpp)
add_executable(07_detectCycle bilibili/01_LinkList/07_detectCycle.cpp)
add_executable(06_detectCycle bilibili/01_LinkList/06_detectCycle.cpp)
add_executable(08_partition bilibili/01_LinkList/08_partition.cpp)
add_executable(09_copyRandomList bilibili/01_LinkList/09_copyRandomList.cpp)
add_executable(10_mergeTwoLists bilibili/01_LinkList/10_mergeTwoLists.cpp)
add_executable(11_mergeKLists bilibili/01_LinkList/11_mergeKLists.cpp)
add_executable(01_stack_basic bilibili/02_stack_queue/01_stack_basic.cpp)
add_executable(02_queue_basic bilibili/02_stack_queue/02_queue_basic.cpp)
add_executable(03_queue_to_stack bilibili/02_stack_queue/03_queue_to_stack.cpp)
add_executable(04_stack_to_queue bilibili/02_stack_queue/04_stack_to_queue.cpp)
add_executable(05_minstack bilibili/02_stack_queue/05_minstack.cpp)
add_executable(06_valid_order bilibili/02_stack_queue/06_valid_order.cpp)
add_executable(07_calculate bilibili/02_stack_queue/07_calculate.cpp)
add_executable(08_heap_basic bilibili/02_stack_queue/08_heap_basic.cpp)
add_executable(09_findKthLargest bilibili/02_stack_queue/09_findKthLargest.cpp)
add_executable(10_findMedian bilibili/02_stack_queue/10_findMedian.cpp)
add_executable(01_cash_pay bilibili/03_greedy/01_cash_pay.cpp)
add_executable(02_findContentChildren bilibili/03_greedy/02_findContentChildren.cpp)
add_executable(03_wiggleMaxLength bilibili/03_greedy/03_wiggleMaxLength.cpp)
add_executable(04_removeKdigits bilibili/03_greedy/04_removeKdigits.cpp)
add_executable(05_canJump bilibili/03_greedy/05_canJump.cpp)
add_executable(06_jump bilibili/03_greedy/06_jump.cpp)
add_executable(07_findMinArrowShots bilibili/03_greedy/07_findMinArrowShots.cpp)
add_executable(08_get_minimum_stop bilibili/03_greedy/08_get_minimum_stop.cpp)
add_executable(01_recursion_basic bilibili/04_recursion/01_recursion_basic.cpp)
add_executable(02_recursion_basic bilibili/04_recursion/02_recursion_basic.cpp)
add_executable(03_subsets bilibili/04_recursion/03_subsets.cpp)
add_executable(04_subsets bilibili/04_recursion/04_subsets.cpp)
add_executable(05_subsetsWithDup bilibili/04_recursion/05_subsetsWithDup.cpp)
add_executable(06_combinationSum2 bilibili/04_recursion/06_combinationSum2.cpp)
add_executable(07_combinationSum2 bilibili/04_recursion/07_combinationSum2.cpp)
add_executable(08_generateParenthesis bilibili/04_recursion/08_generateParenthesis.cpp)
add_executable(09_solveNQueens bilibili/04_recursion/09_solveNQueens.cpp)
add_executable(10_merge_sort bilibili/04_recursion/10_merge_sort.cpp)
add_executable(11_countSmaller bilibili/04_recursion/11_countSmaller.cpp)
add_executable(01_binary_tree_basic bilibili/05_binarytree_graph/01_binary_tree_basic.cpp)
add_executable(02_pathSum bilibili/05_binarytree_graph/02_pathSum.cpp)
add_executable(03_lowestCommonAncestor bilibili/05_binarytree_graph/03_lowestCommonAncestor.cpp)
add_executable(05_flattern bilibili/05_binarytree_graph/05_flattern.cpp)
add_executable(04_flattern bilibili/05_binarytree_graph/04_flattern.cpp)
add_executable(06_bfs_basic bilibili/05_binarytree_graph/06_bfs_basic.cpp)
add_executable(07_rightSideView bilibili/05_binarytree_graph/07_rightSideView.cpp)
add_executable(08_graph_basic bilibili/05_binarytree_graph/08_graph_basic.cpp)
add_executable(09_graph_basic bilibili/05_binarytree_graph/09_graph_basic.cpp)
add_executable(10_graph_dfs bilibili/05_binarytree_graph/10_graph_dfs.cpp)
add_executable(11_graph_bfs bilibili/05_binarytree_graph/11_graph_bfs.cpp)
add_executable(12_canFinish bilibili/05_binarytree_graph/12_canFinish.cpp)
add_executable(13_canFinish bilibili/05_binarytree_graph/13_canFinish.cpp)
add_executable(01_binary_search bilibili/06_binarysearch_tree/01_binary_search.cpp)
add_executable(02_binary_search bilibili/06_binarysearch_tree/02_binary_search.cpp)
add_executable(03_searchInsert bilibili/06_binarysearch_tree/03_searchInsert.cpp)
add_executable(04_searchRange bilibili/06_binarysearch_tree/04_searchRange.cpp)
add_executable(05_cycleSearch bilibili/06_binarysearch_tree/05_cycleSearch.cpp)
add_executable(06_binary_search_tree bilibili/06_binarysearch_tree/06_binary_search_tree.cpp)
add_executable(07_binary_search_tree bilibili/06_binarysearch_tree/07_binary_search_tree.cpp)
add_executable(08_binary_search_tree_encode bilibili/06_binarysearch_tree/08_binary_search_tree_encode.cpp)
add_executable(09_countSmaller bilibili/06_binarysearch_tree/09_countSmaller.cpp)
add_executable(01_longestPalindrome bilibili/07_hash_string/01_longestPalindrome.cpp)
add_executable(02_wordPattern bilibili/07_hash_string/02_wordPattern.cpp)
add_executable(03_groupAnagram bilibili/07_hash_string/03_groupAnagram.cpp)
add_executable(04_groupAnagram bilibili/07_hash_string/04_groupAnagram.cpp)
add_executable(05_lengthOfLongestSubstring bilibili/07_hash_string/05_lengthOfLongestSubstring.cpp)
add_executable(06_findRepeatedDnaSequences bilibili/07_hash_string/06_findRepeatedDnaSequences.cpp)
add_executable(07_findRepeatedDnaSequences bilibili/07_hash_string/07_findRepeatedDnaSequences.cpp)
add_executable(08_minWindow bilibili/07_hash_string/08_minWindow.cpp)
add_executable(01_numIslands bilibili/08_search/01_numIslands.cpp)
add_executable(02_ladderLength bilibili/08_search/02_ladderLength.cpp)
add_executable(03_ladderLength bilibili/08_search/03_ladderLength.cpp)
add_executable(04_makeSquare bilibili/08_search/04_makeSquare.cpp)
add_executable(05_makeSquare bilibili/08_search/05_makeSquare.cpp)
add_executable(06_trapRainWater bilibili/08_search/06_trapRainWater.cpp)
add_executable(07_heap_struct bilibili/08_search/07_heap_struct.cpp)
add_executable(01_climbStairs bilibili/09_dynamic/01_climbStairs.cpp)
add_executable(02_climbStairs bilibili/09_dynamic/02_climbStairs.cpp)
add_executable(03_rob bilibili/09_dynamic/03_rob.cpp)
add_executable(04_maxSubArray bilibili/09_dynamic/04_maxSubArray.cpp)
add_executable(05_coinChange bilibili/09_dynamic/05_coinChange.cpp)
add_executable(06_minimumTotal bilibili/09_dynamic/06_minimumTotal.cpp)
add_executable(07_lengthOfLIS bilibili/09_dynamic/07_lengthOfLIS.cpp)
add_executable(08_lengthOfLIS bilibili/09_dynamic/08_lengthOfLIS.cpp)
add_executable(09_minPathSum bilibili/09_dynamic/09_minPathSum.cpp)
add_executable(10_calculateMinimumHP bilibili/09_dynamic/10_calculateMinimumHP.cpp)
add_executable(01_trie_basic bilibili/10_other/01_trie_basic.cpp)
add_executable(02_trie_basic bilibili/10_other/02_trie_basic.cpp)
add_executable(03_trie bilibili/10_other/03_trie.cpp)
add_executable(04_findCircleNum bilibili/10_other/04_findCircleNum.cpp)
add_executable(05_disjoint_set bilibili/10_other/05_disjoint_set.cpp)
add_executable(06_disjoint_set bilibili/10_other/06_disjoint_set.cpp)
add_executable(07_sunRange bilibili/10_other/07_sunRange.cpp)
add_executable(08_segment_tree bilibili/10_other/08_segment_tree.cpp)
add_executable(455_assign-cookies leetcode/editor/cn/455_assign-cookies.cpp)
add_executable(135_candy leetcode/editor/cn/135_candy.cpp)
add_executable(435_non-overlapping-intervals leetcode/editor/cn/435_non-overlapping-intervals.cpp)
add_executable(605_can-place-flowers leetcode/editor/cn/605_can-place-flowers.cpp)
add_executable(167_two-sum-ii-input-array-is-sorted leetcode/editor/cn/167_two-sum-ii-input-array-is-sorted.cpp)
add_executable(88_merge-sorted-array leetcode/editor/cn/88_merge-sorted-array.cpp)
add_executable(141_linked-list-cycle leetcode/editor/cn/141_linked-list-cycle.cpp)
add_executable(142_linked-list-cycle-ii leetcode/editor/cn/142_linked-list-cycle-ii.cpp)
add_executable(76_minimum-window-substring leetcode/editor/cn/76_minimum-window-substring.cpp)
add_executable(69_sqrtx leetcode/editor/cn/69_sqrtx.cpp)
add_executable(34_find-first-and-last-position-of-element-in-sorted-array leetcode/editor/cn/34_find-first-and-last-position-of-element-in-sorted-array.cpp)
add_executable(81_search-in-rotated-sorted-array-ii leetcode/editor/cn/81_search-in-rotated-sorted-array-ii.cpp)
add_executable(01_quick_sort POJ/1_sort/01_quick_sort.cpp)
add_executable(02_merge_sort POJ/1_sort/02_merge_sort.cpp)
add_executable(03_insertion_sort POJ/1_sort/03_insertion_sort.cpp)
add_executable(04_bubble_sort POJ/1_sort/04_bubble_sort.cpp)
add_executable(05_selection_sort POJ/1_sort/05_selection_sort.cpp)
add_executable(215_kth-largest-element-in-an-array leetcode/editor/cn/215_kth-largest-element-in-an-array.cpp)
add_executable(347_top-k-frequent-elements leetcode/editor/cn/347_top-k-frequent-elements.cpp)
add_executable(695_max-area-of-island leetcode/editor/cn/695_max-area-of-island.cpp)
add_executable(547_number-of-provinces leetcode/editor/cn/547_number-of-provinces.cpp)
add_executable(417_pacific-atlantic-water-flow leetcode/editor/cn/417_pacific-atlantic-water-flow.cpp)
add_executable(46_permutations leetcode/editor/cn/46_permutations.cpp)
add_executable(77_combinations leetcode/editor/cn/77_combinations.cpp)
add_executable(79_word-search leetcode/editor/cn/79_word-search.cpp)
add_executable(51_n-queens leetcode/editor/cn/51_n-queens.cpp)
add_executable(934_shortest-bridge leetcode/editor/cn/934_shortest-bridge.cpp)
add_executable(126_word-ladder-ii leetcode/editor/cn/126_word-ladder-ii.cpp)
add_executable(70_climbing-stairs leetcode/editor/cn/70_climbing-stairs.cpp)
add_executable(198_house-robber leetcode/editor/cn/198_house-robber.cpp)
add_executable(413_arithmetic-slices leetcode/editor/cn/413_arithmetic-slices.cpp)
add_executable(64_minimum-path-sum leetcode/editor/cn/64_minimum-path-sum.cpp)
add_executable(542_01-matrix leetcode/editor/cn/542_01-matrix.cpp)
add_executable(221_maximal-square leetcode/editor/cn/221_maximal-square.cpp)
add_executable(279_perfect-squares leetcode/editor/cn/279_perfect-squares.cpp)
add_executable(91_decode-ways leetcode/editor/cn/91_decode-ways.cpp)
add_executable(139_word-break leetcode/editor/cn/139_word-break.cpp)
add_executable(300_longest-increasing-subsequence leetcode/editor/cn/300_longest-increasing-subsequence.cpp)
add_executable(1143_longest-common-subsequence leetcode/editor/cn/1143_longest-common-subsequence.cpp)
add_executable(06_knapsack POJ/1_sort/06_knapsack.cpp)
add_executable(07_knapsack_full POJ/1_sort/07_knapsack_full.cpp)
add_executable(416_partition-equal-subset-sum leetcode/editor/cn/416_partition-equal-subset-sum.cpp)
add_executable(474_ones-and-zeroes leetcode/editor/cn/474_ones-and-zeroes.cpp)
add_executable(322_coin-change leetcode/editor/cn/322_coin-change.cpp)
add_executable(72_edit-distance leetcode/editor/cn/72_edit-distance.cpp)
add_executable(650_2-keys-keyboard leetcode/editor/cn/650_2-keys-keyboard.cpp)
add_executable(10_regular-expression-matching leetcode/editor/cn/10_regular-expression-matching.cpp)
add_executable(121_best-time-to-buy-and-sell-stock leetcode/editor/cn/121_best-time-to-buy-and-sell-stock.cpp)
add_executable(188_best-time-to-buy-and-sell-stock-iv leetcode/editor/cn/188_best-time-to-buy-and-sell-stock-iv.cpp)
add_executable(309_best-time-to-buy-and-sell-stock-with-cooldown leetcode/editor/cn/309_best-time-to-buy-and-sell-stock-with-cooldown.cpp)
add_executable(241_different-ways-to-add-parentheses leetcode/editor/cn/241_different-ways-to-add-parentheses.cpp)
add_executable(08_greatest_common_divisor_gcd POJ/1_sort/08_greatest_common_divisor_gcd.cpp)
add_executable(204_count-primes leetcode/editor/cn/204_count-primes.cpp)
add_executable(504_base-7 leetcode/editor/cn/504_base-7.cpp)
add_executable(172_factorial-trailing-zeroes leetcode/editor/cn/172_factorial-trailing-zeroes.cpp)
add_executable(415_add-strings leetcode/editor/cn/415_add-strings.cpp)
add_executable(326_power-of-three leetcode/editor/cn/326_power-of-three.cpp)
add_executable(337_house-robber-iii leetcode/editor/cn/337_house-robber-iii.cpp)
add_executable(384_shuffle-an-array leetcode/editor/cn/384_shuffle-an-array.cpp)
add_executable(528_random-pick-with-weight leetcode/editor/cn/528_random-pick-with-weight.cpp)
add_executable(382_linked-list-random-node leetcode/editor/cn/382_linked-list-random-node.cpp)
add_executable(461_hamming-distance leetcode/editor/cn/461_hamming-distance.cpp)
add_executable(190_reverse-bits leetcode/editor/cn/190_reverse-bits.cpp)
add_executable(136_single-number leetcode/editor/cn/136_single-number.cpp)
add_executable(342_power-of-four leetcode/editor/cn/342_power-of-four.cpp)
add_executable(318_maximum-product-of-word-lengths leetcode/editor/cn/318_maximum-product-of-word-lengths.cpp)
add_executable(338_counting-bits leetcode/editor/cn/338_counting-bits.cpp)
add_executable(448_find-all-numbers-disappeared-in-an-array leetcode/editor/cn/448_find-all-numbers-disappeared-in-an-array.cpp)
add_executable(48_rotate-image leetcode/editor/cn/48_rotate-image.cpp)
add_executable(240_search-a-2d-matrix-ii leetcode/editor/cn/240_search-a-2d-matrix-ii.cpp)
add_executable(769_max-chunks-to-make-sorted leetcode/editor/cn/769_max-chunks-to-make-sorted.cpp)
add_executable(232_implement-queue-using-stacks leetcode/editor/cn/232_implement-queue-using-stacks.cpp)
add_executable(155_min-stack leetcode/editor/cn/155_min-stack.cpp)
add_executable(20_valid-parentheses leetcode/editor/cn/20_valid-parentheses.cpp)
add_executable(739_daily-temperatures leetcode/editor/cn/739_daily-temperatures.cpp)
add_executable(09_heap POJ/1_sort/09_heap.cpp)
add_executable(23_merge-k-sorted-lists leetcode/editor/cn/23_merge-k-sorted-lists.cpp)
add_executable(218_the-skyline-problem leetcode/editor/cn/218_the-skyline-problem.cpp)
add_executable(239_sliding-window-maximum leetcode/editor/cn/239_sliding-window-maximum.cpp)
add_executable(10_hash POJ/1_sort/10_hash.cpp)
add_executable(128_longest-consecutive-sequence leetcode/editor/cn/128_longest-consecutive-sequence.cpp)
add_executable(149_max-points-on-a-line leetcode/editor/cn/149_max-points-on-a-line.cpp)
add_executable(332_reconstruct-itinerary leetcode/editor/cn/332_reconstruct-itinerary.cpp)
add_executable(303_range-sum-query-immutable leetcode/editor/cn/303_range-sum-query-immutable.cpp)
add_executable(304_range-sum-query-2d-immutable leetcode/editor/cn/304_range-sum-query-2d-immutable.cpp)
add_executable(560_subarray-sum-equals-k leetcode/editor/cn/560_subarray-sum-equals-k.cpp)
add_executable(242_valid-anagram leetcode/editor/cn/242_valid-anagram.cpp)
add_executable(205_isomorphic-strings leetcode/editor/cn/205_isomorphic-strings.cpp)
add_executable(647_palindromic-substrings leetcode/editor/cn/647_palindromic-substrings.cpp)
add_executable(696_count-binary-substrings leetcode/editor/cn/696_count-binary-substrings.cpp)
add_executable(227_basic-calculator-ii leetcode/editor/cn/227_basic-calculator-ii.cpp)
add_executable(28_implement-strstr leetcode/editor/cn/28_implement-strstr.cpp)
add_executable(206_reverse-linked-list leetcode/editor/cn/206_reverse-linked-list.cpp)
add_executable(21_merge-two-sorted-lists leetcode/editor/cn/21_merge-two-sorted-lists.cpp)
add_executable(24_swap-nodes-in-pairs leetcode/editor/cn/24_swap-nodes-in-pairs.cpp)
add_executable(160_intersection-of-two-linked-lists leetcode/editor/cn/160_intersection-of-two-linked-lists.cpp)
add_executable(234_palindrome-linked-list leetcode/editor/cn/234_palindrome-linked-list.cpp)
add_executable(104_maximum-depth-of-binary-tree leetcode/editor/cn/104_maximum-depth-of-binary-tree.cpp)
add_executable(110_balanced-binary-tree leetcode/editor/cn/110_balanced-binary-tree.cpp)
add_executable(543_diameter-of-binary-tree leetcode/editor/cn/543_diameter-of-binary-tree.cpp)
add_executable(437_path-sum-iii leetcode/editor/cn/437_path-sum-iii.cpp)
add_executable(101_symmetric-tree leetcode/editor/cn/101_symmetric-tree.cpp)
add_executable(1110_delete-nodes-and-return-forest leetcode/editor/cn/1110_delete-nodes-and-return-forest.cpp)
add_executable(637_average-of-levels-in-binary-tree leetcode/editor/cn/637_average-of-levels-in-binary-tree.cpp)
add_executable(105_construct-binary-tree-from-preorder-and-inorder-traversal leetcode/editor/cn/105_construct-binary-tree-from-preorder-and-inorder-traversal.cpp)
add_executable(144_binary-tree-preorder-traversal leetcode/editor/cn/144_binary-tree-preorder-traversal.cpp)
add_executable(11_binary_search_tree POJ/1_sort/11_binary_search_tree.cpp)
add_executable(99_recover-binary-search-tree leetcode/editor/cn/99_recover-binary-search-tree.cpp)
add_executable(669_trim-a-binary-search-tree leetcode/editor/cn/669_trim-a-binary-search-tree.cpp)
add_executable(208_implement-trie-prefix-tree leetcode/editor/cn/208_implement-trie-prefix-tree.cpp)